refactored for thumbnail navigation

--- a/src/components/NextVideosGallery/NextVideosGallery.scss
+++ b/src/components/NextVideosGallery/NextVideosGallery.scss
@@ -65,6 +65,8 @@
     &--title {
       @include subheader;
       cursor: pointer;
+      color: $black;
+      text-decoration: none;
     }
   }
 }
