--- a/src/components/NextVideosGallery/NextVideosGallery.scss
+++ b/src/components/NextVideosGallery/NextVideosGallery.scss
@@ -35,38 +35,38 @@
   &__item {
     display: flex;
     gap: $padding-sm;
+  }
 
-    &--thumbnail {
-      cursor: pointer;
+  &__thumbnail {
+    cursor: pointer;
+    width: calc($button-height * 3.5);
+    min-width: calc($button-height * 3.5);
+
+    height: calc($button-height * 2);
+    object-fit: cover;
+    border-radius: $border-radius;
+
+    @include tablet {
       width: calc($button-height * 3.5);
-      min-width: calc($button-height * 3.5);
-
-      height: calc($button-height * 2);
-      object-fit: cover;
-      border-radius: $border-radius;
-
-      @include tablet {
-        width: calc($button-height * 3.5);
-      }
-
-      @include mobile {
-        width: 40%;
-        max-width: calc($button-height * 3.5);
-      }
     }
 
-    &--info {
-      max-width: calc(100% - calc($button-height * 3.5));
-      display: flex;
-      flex-direction: column;
-      gap: $padding-xsm;
+    @include mobile {
+      width: 40%;
+      max-width: calc($button-height * 3.5);
     }
+  }
 
-    &--title {
-      @include subheader;
-      cursor: pointer;
-      color: $black;
-      text-decoration: none;
-    }
+  &__info {
+    max-width: calc(100% - calc($button-height * 3.5));
+    display: flex;
+    flex-direction: column;
+    gap: $padding-xsm;
+  }
+
+  &__name {
+    @include subheader;
+    cursor: pointer;
+    color: $black;
+    text-decoration: none;
   }
 }
