--- a/src/pages/Player/Player.scss
+++ b/src/pages/Player/Player.scss
@@ -1,7 +1,7 @@
 @import "../../styles/partials/variables";
 @import "../../styles/partials/mixins";
 
-.plaer-page {
+.player-page {
   display: flex;
   flex-direction: row;
   gap: $padding-md;
