--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -34,6 +34,7 @@ $col-lg-5: calc(63px * 5 + 24px * 4);
 $col-lg-6: calc(63px * 6 + 24px * 5);
 $col-lg-7: calc(63px * 7 + 24px * 6);
 $col-lg-8: calc(63px * 8 + 24px * 7);
+$col-lg-9: calc(63px * 9 + 24px * 8);
 
 $col-md-1: calc(calc(100vw - 72px - 264px) / 12);
 $col-md-2: calc(calc(calc(100vw - 72px - 264px) / 6) + 24px);
