--- a/src/pages/Upload/Upload.scss
+++ b/src/pages/Upload/Upload.scss
@@ -1,13 +1,110 @@
 @import "../../styles/partials/variables";
 @import "../../styles/partials/mixins";
 
-.upload {
+.upload-page {
+  display: flex;
+  flex-direction: column;
+  gap: $padding-md;
+
+  @include mobile {
+    gap: $padding-sm;
+  }
+
   &__title {
     border-bottom: $divide-line;
     width: 100%;
 
     &--text {
       @include header;
+    }
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: row;
+    gap: $padding-md;
+    border-bottom: $divide-line;
+    padding-bottom: $padding-md;
+
+    @include tablet {
+      flex-direction: column;
+    }
+    @include mobile {
+      flex-direction: column;
+      gap: $padding-sm;
+      padding-bottom: $padding-sm;
+    }
+
+    &--first {
+      width: $col-lg-4;
+
+      @include tablet {
+        width: $col-md-6;
+      }
+
+      @include mobile {
+        width: 100%;
+      }
+    }
+
+    &--second {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: $padding-md;
+
+      @include desktop {
+        width: $col-lg-8;
+      }
+
+      @include mobile {
+        gap: $padding-sm;
+      }
+    }
+  }
+
+  &__label {
+    @include label;
+  }
+
+  &__thumbnail {
+    width: 100%;
+    border-radius: $border-radius;
+  }
+
+  &__title-input {
+    @include input;
+    width: 100%;
+  }
+
+  &__description-input {
+    @include input;
+    width: 100%;
+    height: 5rem;
+  }
+
+  &__submit {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    gap: $padding-md;
+    padding-top: $padding-md;
+
+    @include mobile {
+      gap: $padding-sm;
+      padding-top: $padding-sm;
+    }
+  }
+
+  &__button {
+    width: $col-lg-2;
+
+    @include tablet {
+      width: $col-md-3;
+    }
+
+    @include mobile {
+      width: 100%;
     }
   }
 }
