Reverse button order for upload page on mobiles

--- a/src/pages/Upload/Upload.scss
+++ b/src/pages/Upload/Upload.scss
@@ -93,6 +93,7 @@
     @include mobile {
       gap: $padding-sm;
       padding-top: $padding-sm;
+      flex-direction: column-reverse;
     }
   }
 
